--- a/style.css
+++ b/style.css
@@ -67,7 +67,28 @@ body{
     top: 240px;
     left: 150px;
     color: white;
-    z-index: 3
+    z-index: 3;
+    margin-top: 10px;
+
+}
+
+.will{
+    font-size: 20px;
+    margin: 10px;
+    margin-bottom: 0;
+}
+.Slogan{
+    font-size: 50px;
+    margin: 0;
+}
+
+.content{
+    margin: 0;
+    margin-top: 25px;
+}
+
+.display{
+    margin: 0;
 }
 
 #Started{
@@ -86,6 +107,7 @@ body{
     border-radius: 7px;
     z-index: 3;
 }
+
 .bgcolor{
     background-color: gray;
     width: 1348px;
@@ -101,17 +123,26 @@ body{
     top: 778px;
     left: 780px;
     color: grey;
-    font-size: 14px;
-    text-align: justify;
+
 }
 
 .wel{
     color: red;
+    margin: 2px;
+    margin-bottom: 15px;
+    margin-top: 30px;
 }
 .company{
 
     font-weight: bolder;
     color: black;
+    margin: 0;
+}
+
+.post{
+    margin-top: 30px;
+    width: 500px;
+
 }
 
 .rectangle-{
@@ -192,18 +223,22 @@ body{
     left: 987px;
 }
 
-.text3{
+.text-{
     position: absolute  ;
     top: 1335px;
-    left: 355px;
+    left: 369px;
     text-align: center;
     color: white;
+}
+
+.dummy{
+    font-size: 15px;
 }
 
 .red-{
     background-color: #C51605;
     width: 65px;
-    height: 132px;
+    height: 115px;
     top: 1505px;
     left: 135px;
     position: absolute;
@@ -212,7 +247,7 @@ body{
 .red--{
     background-color: #C51605;
     width: 65px;
-    height: 132px;
+    height: 115px;
     top: 1505px;
     left: 435px;
     position: absolute;
@@ -221,7 +256,7 @@ body{
 .red---{
     background-color: #C51605;
     width: 65px;
-    height: 132px;
+    height: 115px;
     top: 1505px;
     left: 730px;
     position: absolute;
@@ -230,8 +265,335 @@ body{
 .red----{
     background-color: #C51605;
     width: 65px;
-    height: 132px;
+    height: 115px;
     top: 1505px;
     left: 1025px;
     position: absolute;
+}
+
+.click-{
+    position: absolute;
+    size-adjust: 90%;
+    left: 119px;
+    top: 1733px ;
+    color: white;
+    font-weight: bold;
+    background-color: #C51605;
+    border: none;
+    padding:8px;
+    padding-left: 38px;
+    padding-right: 38px;
+    height: 47px;
+    border-radius: 7px;
+    z-index: 3;
+}
+.click--{
+    position: absolute;
+    size-adjust: 90%;
+    left: 413px;
+    top: 1733px ;
+    color: white;
+    font-weight: bold;
+    background-color: #C51605;
+    border: none;
+    padding:8px;
+    padding-left: 38px;
+    padding-right: 38px;
+    height: 47px;
+    border-radius: 7px;
+    z-index: 3;
+}
+
+.click---{
+    position: absolute;
+    size-adjust: 90%;
+    left: 715px;
+    top: 1733px ;
+    color: white;
+    font-weight: bold;
+    background-color: #C51605;
+    border: none;
+    padding:8px;
+    padding-left: 38px;
+    padding-right: 38px;
+    height: 47px;
+    border-radius: 7px;
+    z-index: 3;
+}
+
+.click----{
+    position: absolute;
+    size-adjust: 80%;
+    left: 1010px;
+    top: 1733px ;
+    color: white;
+    font-weight: bold;
+    background-color: #C51605;
+    border: none;
+    padding:8px;
+    padding-left: 38px;
+    padding-right: 38px;
+    height: 47px;
+    border-radius: 7px;
+    z-index: 3;
+}
+
+
+.rectangle---{
+    position: absolute; 
+    top: 1880px;
+    left: 890px;
+    height: 490px;
+    width: 278px;
+    background-color: #C51605;
+    float: right;
+    z-index: 0;
+}
+
+.jeep img{
+    position: absolute;
+    top: 1980px;
+    left: 650px;
+    width: 650px;
+}
+
+.textfour{
+    top: 2000px;
+    color: black;
+    position: absolute;
+    left: 130px;
+}
+
+.committed{
+    font-size: 20px;
+    margin: 0;
+    color: #C51605;
+}
+.statement{
+    font-size: 50px;
+    margin: 0;  
+}
+
+.excited{
+    margin-top: 40px;
+    color: gray;
+    width: 450px;
+}
+
+.about-{
+    position: absolute;
+    size-adjust: 90%;
+    left: 130px;
+    top: 2250px ;
+    color: white;
+    font-weight: bold;
+    background-color: #C51605;
+    border: none;
+    padding:8px;
+    padding-left: 38px;
+    padding-right: 38px;
+    height: 47px;
+    border-radius: 7px;
+    z-index: 3;
+}
+.bgfifth{
+    background-color: #272829;
+    width: 1348px;
+    height: 641px;
+    top: 2370px;
+    position: absolute;
+}
+
+.rectanglefifth{
+    position: absolute; 
+    top: 2500px;
+    left: 0;
+    height: 250px;
+    width: 1348px;
+    background-color: #C51605;
+    float: right;
+    z-index: 0;
+}
+
+.ferrari img{
+    position: absolute;
+    top: 2385px;
+    width: 600px;
+    left: 363px;
+
+}
+
+div .quote{
+    position: absolute;
+    top:2510px;
+    width: 160px;
+    color: white;
+    left: 100px;
+
+}
+
+div .are{
+    position: absolute;
+    color: white;
+    width: 190px;
+    top: 2605px;
+    left: 100px;
+}
+
+div .here{
+    position: absolute;
+    size-adjust: 90%;
+    left: 100px;
+    top: 2669px ;
+    color: black;
+    font-weight: bolder;
+    background-color: #ffff;
+    border: none;
+    padding:8px;
+    padding-left: 38px;
+    padding-right: 38px;
+    height: 47px;
+    border-radius: 7px;
+    z-index: 3;
+}
+
+div .reservation{
+    position: absolute;
+    top:2510px;
+    width: 160px;
+    color: white;
+    left: 1084px;
+    text-align: end;
+}
+
+div .are-{
+    position: absolute;
+    color: white;
+    width: 190px;
+    top: 2605px;
+    left: 1073px;
+    text-align: center;
+}
+
+div .here-{
+    position: absolute;
+    size-adjust: 90%;
+    left: 1105px;
+    top: 2669px ;
+    color: black;
+    font-weight: bolder;
+    background-color: #ffff;
+    border: none;
+    padding:8px;
+    padding-left: 38px;
+    padding-right: 38px;
+    height: 47px;
+    border-radius: 7px;
+    z-index: 3;
+}
+
+div .maps img{
+    position: absolute;
+    top: 3011px;
+    height: 300px;
+    width: 100%;
+}
+
+div .bglast{
+    background-color: #272829;
+    width: 1348px;
+    height: 485px;
+    top: 3311px;
+    position: absolute;
+}
+
+div .callicon{
+    color: white;
+    top: 3460px;
+    font-size: 25px;
+    position: absolute;
+    left: 540px;
+}
+
+div .det{
+    color: #ffff;
+    position: absolute;
+    top: 3420px;
+    left: 100px;    
+}
+
+div .Touch{
+    font-size: 30px;
+    margin: 0px;
+    font-size: 26px;
+}
+
+div .Details{
+    margin: 0px;
+    font-size: 45px;
+}
+
+.dummy-{
+    position: absolute;
+    top: 3500px;
+    left: 104px;
+    color: #ffff;
+    width: 290px;
+}
+
+div .phone{
+    position: absolute;
+    top: 3480px;
+    left: 540px;
+    color: #ffff;
+    width: 300px;
+}
+
+.more{
+    color: white;
+    border: none;
+    background-color: #C51605;
+    position: absolute;
+    top: 3467px;
+    left: 1015px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    padding-left: 50px;
+    padding-right: 50px;
+    border-radius: 7px;
+}
+
+.Copyright{
+    left: 990px;
+    color: white;
+    position: absolute;
+    top: 3512px;
+    font-size: small;
+}
+
+
+#navigator-{
+    display:flex;
+    background-color: #FFFBF5;
+    margin-left: 0;
+    top: 3500px;
+    font-size: 18px;
+    align-items: center;
+    z-index: 3;
+    position: absolute;
+    border-bottom-right-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+.nav- a{
+    text-decoration:none;
+    color: gray;
+    font-size: small;
+    display:row nowrap;
+    padding: 13px;
+    text-size-adjust:auto;
+}
+
+.Logo-{
+    
 }
