--- a/style.css
+++ b/style.css
@@ -763,5 +763,54 @@ div .phone{
 }
 
 @media screen and (max-width: 600px){
+    #navigator{
+        display: flex;
+        background-color: #FFFBF5;
+        margin-left: 240px;
+        margin-top: 30px;
+        align-items: center;
+        z-index: 3;
+        position: sticky;
+        border-bottom-left-radius: 15px;
+        border-top-left-radius: 15px;
+    }
+    .nav a{
+        text-decoration:none;
+        color: gray;
+        font-size: small;
+        display:row nowrap;
+        padding: 13px;
 
+    }
+    
+    .Logo{
+        margin-left:20px; 
+    }
+    .CAR img{
+        margin-top: ;
+        margin-left: 715px;
+        width: 530px;
+        position: relative;
+        z-index: 2;
+        
+    }
+
+
+    .rectangle{
+        position: absolute; 
+        top:0;
+        margin-left: 830px;
+        height: 641px;
+        width: 274px;
+        background-color: #C51605;
+        float: right;
+        z-index: 1;
+    }
+    #jungle img{
+        position: absolute;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 100vh;
+        width: 100%;
+    }
 }
